--- a/styles.css
+++ b/styles.css
@@ -142,9 +142,9 @@ button {
 }
 
 #histories {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 8% 3%;
 }
 
 .card {
@@ -165,6 +165,9 @@ button {
   );
   backdrop-filter: blur(5px);
   margin-bottom: 30px;
+}
+.card p {
+  padding-left: 20px;
 }
 
 #modal-background {
@@ -188,5 +191,12 @@ button {
   }
   .card {
     flex-direction: column;
+  }
+}
+@media only screen and (max-width: 1080px) {
+  #histories {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
   }
 }
